<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background2"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/background_image"/>

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="5sp"
            app:lottie_rawRes="@raw/medicine"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:fontFamily="@font/font"
            android:textSize="25sp"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:autofillHints="emailAddress"
            android:background="@drawable/border_style"
            android:fontFamily="@font/font1"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:layout_marginTop="5dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:textColorHint="@color/black"
            android:padding="15dp"
            android:drawablePadding="10dp"
            android:fontFamily="@font/font1"
            android:background="@drawable/border_style"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="@font/font1"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/font1"
            android:text="@string/login"
            android:textSize="20sp"
            app:cornerRadius="15dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lastlogin"
            android:textSize="18sp"
            android:textColor="@color/dark_blue2"
            android:layout_marginStart="5sp"
            android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textSize="18sp"
                android:textColor="@color/dark_blue2"
                android:layout_marginStart="5sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/Signinwithphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/signinwithphone"
                android:textColor="@color/black"
                android:fontFamily="@font/font1"
                android:drawableStart="@drawable/ic_baseline_phone_24"/>

        </LinearLayout>




    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>